# OmniMatchDeeplearningTool

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEVLOG.md  OPTIMIZATION_PLAN.md  README.md  build_all.bat  build_debug.bat  build_release.bat  build_verify.txt  clean_build.bat  omnibuild.bat  run_build.bat  run_tests.bat  vcpkg.json
.claude/: settings.local.json
config/: default_config.json
docs/superpowers/plans/: 2026-03-19-phase1a-skeleton-platform.md  2026-03-19-phase1b-tensor-cpubackend.md  2026-03-19-phase1c-autograd.md  2026-03-22-qt6-full-rewrite.md  2026-03-25-gpu-resident-tensor-rewrite.md  2026-03-26-cuda-backward-full-gpu.md  2026-03-26-halcon-grade-training-pipeline.md  2026-04-02-groupnorm-training-quality.md
docs/superpowers/specs/: 2026-03-19-deepforge-design.md
include/: df_types.h  om_types.h
resources/: app_icon.rc  resources.qrc
resources/themes/: dark_theme.qss  light_theme.qss
scripts/: export_resnet_pretrained.py  import_hikvision.py
src/: main.cpp  train_main.cpp
src/app/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h  NavigationBar.cpp  NavigationBar.h  StatusBar.cpp  StatusBar.h  ThemeManager.cpp  ThemeManager.h
src/core/: ContourApprox.h  DLTypes.cpp  DLTypes.h  DataDiagnostics.h  DataFormatConverter.h  ErrorCode.h  ModelPreCheck.h  MultiROI.h  NmsUtils.h  UpdateChecker.cpp  UpdateChecker.h
src/core/data/: Annotation.cpp  Annotation.h  ImageDataset.cpp  ImageDataset.h  ImageEntry.cpp  ImageEntry.h  LabelInfo.cpp  LabelInfo.h
src/core/evaluation/: EvaluationResult.h  MetricsCalculator.cpp  MetricsCalculator.h  ModelExporter.cpp  ModelExporter.h  ReportExporter.h  ReportGenerator.cpp  ReportGenerator.h
src/core/i18n/: TranslationManager.cpp  TranslationManager.h
src/core/project/: Project.cpp  Project.h  ProjectManager.cpp  ProjectManager.h  ProjectSerializer.cpp  ProjectSerializer.h
src/core/training/: TrainingConfig.h  TrainingSession.cpp  TrainingSession.h
src/cuda/: cuda_kernels.cu  cuda_kernels.cuh
src/engine/: OnnxRuntimeInference.cpp  OnnxRuntimeInference.h  OvInference.cpp  OvInference.h  df.engine.activations.ixx  df.engine.annotation.ixx  df.engine.autoencoder.ixx  df.engine.autograd.ixx  df.engine.conv.ixx  df.engine.linear.ixx  df.engine.loss.ixx  df.engine.mnist.ixx  df.engine.module.ixx  df.engine.optimizer.ixx  df.engine.resnet.ixx  df.engine.serializer.ixx  df.engine.tensor.ixx  df.engine.tensor_ops.ixx  df.engine.tensor_storage.ixx  df.engine.unet.ixx  df.engine.yolo.ixx  om.engine.activations.ixx  om.engine.active_learning.ixx  om.engine.advanced_learning.ixx  om.engine.annotation.ixx  om.engine.applications.ixx  om.engine.autoencoder.ixx  om.engine.autograd.ixx  om.engine.checkpoint.ixx  om.engine.conv.ixx  om.engine.convnext.ixx  om.engine.crnn.ixx  om.engine.data_pipeline.ixx  om.engine.data_synthesis.ixx  om.engine.dataset_version.ixx  om.engine.dbnet.ixx  om.engine.defect_generator.ixx  om.engine.dinomaly.ixx  om.engine.distillation.ixx  om.engine.distributed.ixx  (+45 more)
src/engine/bridge/: EngineBridge.cpp  EngineBridge.h  ModelRegistry.cpp  ModelRegistry.h
src/hal/: df.hal.cpu_backend.ixx  om.hal.cpu_backend.ixx  om.hal.cuda_backend.ixx  om.hal.simd.ixx
src/platform/: df.platform.config.ixx  df.platform.database.ixx  df.platform.filesystem.ixx  df.platform.logger.ixx  df.platform.memory.ixx  df.platform.thread_pool.ixx  om.platform.config.ixx  om.platform.database.ixx  om.platform.filesystem.ixx  om.platform.logger.ixx  om.platform.memory.ixx  om.platform.thread_pool.ixx
src/ui/: app_main.cpp
src/ui/dialogs/: AdvancedTrainingDialog.cpp  AdvancedTrainingDialog.h  AugmentationPreviewDialog.cpp  AugmentationPreviewDialog.h  DataSynthesisDialog.cpp  DataSynthesisDialog.h  HelpDialog.cpp  HelpDialog.h  LabelManagementDialog.cpp  LabelManagementDialog.h  SettingsDialog.cpp  SettingsDialog.h
src/ui/pages/: BasePage.cpp  BasePage.h
src/ui/pages/evaluation/: EvaluationPage.cpp  EvaluationPage.h
src/ui/pages/export/: ExportPage.cpp  ExportPage.h
src/ui/pages/gallery/: GalleryPage.cpp  GalleryPage.h
src/ui/pages/image/: ImagePage.cpp  ImagePage.h
src/ui/pages/inspection/: InspectionPage.cpp  InspectionPage.h
src/ui/pages/project/: NewProjectDialog.cpp  NewProjectDialog.h  ProjectPage.cpp  ProjectPage.h
src/ui/pages/split/: SplitPage.cpp  SplitPage.h
src/ui/pages/training/: TrainingPage.cpp  TrainingPage.h
src/ui/widgets/: AnnotationCommands.cpp  AnnotationCommands.h  AnnotationController.cpp  AnnotationController.h  AnnotationGraphicsItem.cpp  AnnotationGraphicsItem.h  ClassDistributionChart.cpp  ClassDistributionChart.h  ConfidenceHistogramChart.cpp  ConfidenceHistogramChart.h  ConfusionMatrixHeatmap.cpp  ConfusionMatrixHeatmap.h  GradCAMOverlay.cpp  GradCAMOverlay.h  LabelPieChart.cpp  LabelPieChart.h  LoadingOverlay.cpp  LoadingOverlay.h  ModelComplexityWidget.cpp  ModelComplexityWidget.h  ROCPRCurveChart.cpp  ROCPRCurveChart.h  ResourceMonitorWidget.cpp  ResourceMonitorWidget.h  ShortcutHelpOverlay.cpp  ShortcutHelpOverlay.h  SmartLabelTool.cpp  SmartLabelTool.h  SplashScreen.cpp  SplashScreen.h  ThemeColors.h  ThumbnailDelegate.cpp  ThumbnailDelegate.h  ToastNotification.cpp  ToastNotification.h  TrainingLossChart.cpp  TrainingLossChart.h  ZoomableGraphicsView.cpp  ZoomableGraphicsView.h
tests/: test_autograd.cpp  test_comprehensive.cpp  test_config.cpp  test_conv.cpp  test_database.cpp  test_filesystem.cpp  test_logger.cpp  test_memory.cpp  test_models.cpp  test_nn.cpp  test_phase5.cpp  test_phase5b.cpp  test_regression.cpp  test_resnet.cpp  test_tensor.cpp  test_tensor_ops.cpp  test_thread_pool.cpp
图标/files/: preview_ja.html  preview_ko.html
图标/files/omnimatch-icons/omnimatch-icons/: preview_de.html  preview_en.html  preview_zh.html
